# opensearch-client

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  pyproject.toml
.claude/skills/opensearch-server/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: TECH_REVIEW.md
examples/: basic_text_search.py  embeddings_example.py  hybrid_search.py
src/opensearch_client/: __init__.py  client.py  index.py  vectorstore.py
src/opensearch_client/hybrid_search/: __init__.py  hybrid_query.py  pipeline.py
src/opensearch_client/semantic_search/: knn_search.py
src/opensearch_client/semantic_search/embeddings/: __init__.py  base.py  fastembed.py  openai.py
src/opensearch_client/text_search/: __init__.py  analyzer.py  query_builder.py
src/opensearch_client/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_client.py  test_hybrid_search.py
tests/unit/: test_hybrid_query.py  test_knn_search.py  test_pipeline.py  test_query_builder.py  test_vectorstore.py
