[project]
name = "opensearch-client"
version = "0.1.0"
description = "OpenSearch client with hybrid search support for Korean text"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "leo", email = "liniarq@gmail.com"}
]
keywords = ["opensearch", "search", "vector", "hybrid", "korean", "nori"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opensearch-py>=3.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
local = ["fastembed>=0.4"]
all = ["openai>=1.0", "fastembed>=0.4"]

[project.urls]
Homepage = "https://github.com/leo/opensearch-client"
Repository = "https://github.com/leo/opensearch-client"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensearch_client"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requires OpenSearch)",
    "e2e: marks tests as end-to-end tests",
]
